# notesRAG

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.py  testing.ipynb
data/: audio_text.py
pipeline/: document_store.py  llm_call.py  pipeline.py  prompt.py  workflow.py
tools/: json_conversion.py
